--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <p><strong>Material:</strong>liston morado,fomi adiamantado cafe,mariposa tornasol,palos de madera y papel coreano rosa . </p>
                     <p><strong>Girasoles disponibles:</strong> 15 </p>
                 </div>
-            </div>v
+            </div>
      
 
             <div class="categoria">
