--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     texto.textContent = `${nombre} - $${precio.toFixed(2)}`;
 
     const botonEliminar = document.createElement("button");
-    botonEliminar.textContent = "❌";
+    botonEliminar.textContent = "eliminar";
     botonEliminar.style.marginLeft = "10px";
     botonEliminar.onclick = function () {
       listaCarrito.removeChild(li);
