--- a/cool.HTML
+++ b/cool.HTML
@@ -51,6 +51,54 @@
 
         <center><h2>Explora Nuestras Rosas</h2>
         <p>Descubre más sobre cómo nuestras rosas eternas son creadas y preservadas.</p></center>
+<section id="contacto" style="max-width: 600px; margin: auto; padding: 20px;">
+  <h2>📬 Contáctanos</h2>
+  <form id="formulario-contacto">
+    <label for="nombre">Nombre:</label><br />
+    <input type="text" id="nombre" name="nombre" required><br /><br />
+
+    <label for="correo">Correo electrónico:</label><br />
+    <input type="email" id="correo" name="correo" required><br /><br />
+
+    <label for="telefono">Teléfono:</label><br />
+    <input type="tel" id="telefono" name="telefono"><br /><br />
+
+    <label for="mensaje">Mensaje:</label><br />
+    <textarea id="mensaje" name="mensaje" rows="5" required></textarea><br /><br />
+
+    <button type="submit">Enviar</button>
+  </form>
+</section>
+
+<style>
+  #contacto input,
+  #contacto textarea,
+  #contacto button {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    font-size: 1em;
+  }
+
+  #contacto button {
+    background-color: #e91e63;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+
+  #contacto button:hover {
+    background-color: #c2185b;
+  }
+
+  @media (max-width: 600px) {
+    #contacto {
+      padding: 10px;
+    }
+  }
+</style>
+
        
 
     <footer id="contacto">
