--- a/mu.html
+++ b/mu.html
@@ -4,15 +4,82 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>monserrat martinez reyes </title>
+	  <link rel="stylesheet" href="milo.css">
+
 </head>
 <body>
-<p>Sentencia switch en java script</p>
+	 <header>
+    <div class="contenedor-img">
+      <img src="melancolia.png" alt="Logo de Rosas Eternas">
+    </div>
+    <h1>Rosas Eternas</h1>
+    <p>La belleza que perdura</p>
+    <nav>
+      <ul class="navbar">
+	              <li><a href="mu.html">carrito</a></li>
 
-<script src="Sentencia.js" >
-	alert("P/u00E1gina con uso de la sentencia swith "+"\n" +"Opciones :"+"\n"+"1.Opcion 1."+"\n"+"2. opcion 2"+"\n"+"3. opcion 3" );
-	var n1 = parseInt(prompt("seteccionauna opcion "))
+        <li><a href="cool.HTML">Inicio</a></li>
+        <li><a href="index.html">Productos</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+<section id="carrito">
+  <h2>🛒 Carrito de Compras</h2>
+  <ul id="lista-carrito"></ul>
+  <p><strong>Total:</strong> $<span id="total">0.00</span></p>
+
+  <h3>💳 Método de Pago</h3>
+  <form id="metodo-pago">
+    <label><input type="radio" name="pago" value="credito" required> Tarjeta de Crédito</label><br>
+    <label><input type="radio" name="pago" value="debito"> Tarjeta de Débito</label><br>
+    <label><input type="radio" name="pago" value="transferencia"> Transferencia Bancaria</label><br><br>
+    <button type="submit">Confirmar Compra</button>
+  </form>
+</section>
+
+<script>
+  function toggleDetails(id) {
+    const detalles = document.getElementById(id);
+    detalles.style.display = detalles.style.display === 'block' ? 'none' : 'block';
+  }
+
+  let total = 0;
+  const listaCarrito = document.getElementById("lista-carrito");
+  const totalElement = document.getElementById("total");
+
+  function agregarAlCarrito(nombre, precio) {
+    const li = document.createElement("li");
+
+    // Botón para eliminar el producto
+    const botonEliminar = document.createElement("button");
+    botonEliminar.textContent = "❌ Quitar";
+    botonEliminar.style.marginLeft = "10px";
+    botonEliminar.onclick = function () {
+      listaCarrito.removeChild(li);
+      total -= precio;
+      totalElement.textContent = total.toFixed(2);
+    };
+
+    li.textContent = `${nombre} - $${precio.toFixed(2)}`;
+    li.appendChild(botonEliminar);
+    listaCarrito.appendChild(li);
+
+    total += precio;
+    totalElement.textContent = total.toFixed(2);
+  }
+
+  // Evento al enviar método de pago
+  document.getElementById("metodo-pago").addEventListener("submit", function (e) {
+    e.preventDefault();
+    const metodoSeleccionado = document.querySelector('input[name="pago"]:checked');
+    if (metodoSeleccionado) {
+      alert(`Has seleccionado pagar con: ${metodoSeleccionado.value.toUpperCase()}`);
+    }
+  });
 </script>
-
-
+<footer style="text-align: center; padding: 1rem;">
+    <p>&copy; 2025 Rosas Eternas MS. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
