--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         
         <nav>
             <ul class="navbar">
+		            	              <li><a href="mu.html">carrito</a></li>
+
                 <li><a href="cool.HTML">Inicio</a></li>
                 <li><a href="index.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
