--- a/index.html
+++ b/index.html
@@ -339,7 +339,62 @@
             </div>
     </section>
 	 </section>
- 
+ <section id="carrito">
+  <h2>🛒 Carrito de Compras</h2>
+  <ul id="lista-carrito"></ul>
+  <p><strong>Total:</strong> $<span id="total">0.00</span></p>
+
+  <h3>💳 Método de Pago</h3>
+  <form id="metodo-pago">
+    <label><input type="radio" name="pago" value="Crédito" required> Tarjeta de Crédito</label><br>
+    <label><input type="radio" name="pago" value="Débito"> Tarjeta de Débito</label><br>
+    <label><input type="radio" name="pago" value="Transferencia"> Transferencia Bancaria</label><br><br>
+    <button type="submit">Confirmar Compra</button>
+  </form>
+</section>
+
+<script>
+  function toggleDetails(id) {
+    const detalles = document.getElementById(id);
+    detalles.style.display = detalles.style.display === 'block' ? 'none' : 'block';
+  }
+
+  let total = 0;
+  const listaCarrito = document.getElementById("lista-carrito");
+  const totalElement = document.getElementById("total");
+
+  function agregarAlCarrito(nombre, precio) {
+    const li = document.createElement("li");
+    const texto = document.createElement("span");
+    texto.textContent = `${nombre} - $${precio.toFixed(2)}`;
+
+    const botonEliminar = document.createElement("button");
+    botonEliminar.textContent = "Eliminar";
+    botonEliminar.style.marginLeft = "10px";
+    botonEliminar.onclick = function () {
+      listaCarrito.removeChild(li);
+      total -= precio;
+      totalElement.textContent = total.toFixed(2);
+    };
+
+    li.appendChild(texto);
+    li.appendChild(botonEliminar);
+    listaCarrito.appendChild(li);
+
+    total += precio;
+    totalElement.textContent = total.toFixed(2);
+  }
+
+  // Evento para confirmar compra y mostrar método de pago
+  document.getElementById("metodo-pago").addEventListener("submit", function (e) {
+    e.preventDefault();
+    const metodo = document.querySelector('input[name="pago"]:checked');
+    if (metodo) {
+      alert(`Has seleccionado pagar con: ${metodo.value}`);
+    }
+  });
+</script>
+
 
 
   <footer id="contacto">
