--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             </div>
     </section>
 	 </section>
-	<center><h1>♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥</h1></center>
+	<center><h1>♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥</h1></center>
 <section id="carrito">
   <h2> carrito de Compras</h2>
   <ul id="lista-carrito"></ul>
@@ -360,7 +360,7 @@
     const detalles = document.getElementById(id);
     detalles.style.display = detalles.style.display === 'block' ? 'none' : 'block';
   }
-<Right>
+
   let total = 0;
   const listaCarrito = document.getElementById("lista-carrito");
   const totalElement = document.getElementById("total");
@@ -378,7 +378,7 @@
       listaCarrito.removeChild(li);
       total -= precio;
       totalElement.textContent = total.toFixed(2);
-	    </Right?
+	    ?
     };
 
     li.appendChild(texto);
