--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             </div>
     </section>
 	 </section>
-	<center><h1>♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥</h1></center>
+	<center><h1>♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥</h1></center>
 <section id="carrito">
   <h2> carrito de Compras</h2>
   <ul id="lista-carrito"></ul>
