--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             </ul>
         </nav>
     </header>
-	 
+        <div class="mi">
+
     <section id="Lista">
           <div class="categorias-lista">
 
@@ -338,6 +339,7 @@
             </div>
     </section>
 	 </section>
+	</div>
 	<center><h1>♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥</h1></center>
 <section id="carrito">
   <h2> carrito de Compras</h2>
