--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
             }
         }
     </script>
+	<style>
+  .categoria img {
+      width: 200px;     /* Ajusta si necesitas otro tamaño */
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px; /* Opcional */
+  }
+</style>
+
 </head>
 <body>
    <center><h1>CATALOGO</h1></center> 
