--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
                 <li><a href="cool.HTML">Inicio</a></li>
                 <li><a href="index.html">Productos</a></li>
+		                    <li><a href="index.html"> </a></li>
+
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
