--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,17 @@
       <p>
         Si alguno de nuestros diseños resonó contigo o si deseas crear algo especial, estaré encantada de ayudarte a dar vida a ese recuerdo inolvidable.
       </p>
-
+</section>
+    <section class="seccion" id="contacto">
+      <h2>Contáctanos</h2>
+      <p>Escríbenos para más información o para hacer tu pedido.</p>
+      <form id="form-contacto">
+        <input type="text" placeholder="Tu nombre" required />
+        <input type="email" placeholder="Tu correo" required />
+        <textarea rows="5" placeholder="Tu mensaje" required></textarea>
+        <button type="submit">Enviar</button>
+      </form>
+    </section>
       <div class="informacion-contacto" style="margin-top: 2rem;">
         <h3>¿Quieres ponerte en contacto?</h3>
         <p><strong>WhatsApp:</strong> 664 360 4682</p>
