--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="contenedor-img">
-      <img src="melancolia.png" alt="Logo de Rosas Eternas">
+      <img src="alin.png" alt="Logo de Rosas Eternas">
     </div>
     <h1>Rosas Eternas</h1>
     <p>La belleza que perdura</p>
@@ -64,4 +64,5 @@
   </footer>
 </body>
 </html>
+
 
