--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    
 	 <header>
         <div class="contenedor-img">
-        <img src= melancolia.png>
+        <img src= alin.png>
 	</div>
             <h1>Rosas Eternas</h1>
             <p>La belleza que perdura</p>
@@ -42,7 +42,7 @@
 
                 <li><a href="cool.HTML">Inicio</a></li>
                 <li><a href="index.html">Productos</a></li>
-		                    <li>♥♥♥♥♥♥</li>
+		                    
 
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
@@ -428,3 +428,4 @@
   <footer id="contacto">
  <center> <p>&copy; 2025 Rosas Eternas MS. Todos los derechos reservados.</p></center></body>
 </html>
+
