--- a/mu.html
+++ b/mu.html
@@ -10,7 +10,7 @@
 <body>
 	 <header>
     <div class="contenedor-img">
-      <img src="melancolia.png" alt="Logo de Rosas Eternas">
+      <img src="alin.png" alt="Logo de Rosas Eternas">
     </div>
     <h1>Rosas Eternas</h1>
     <p>La belleza que perdura</p>
@@ -101,3 +101,4 @@
   </footer>
 </body>
 </html>
+
