--- a/mill.html
+++ b/mill.html
@@ -18,6 +18,7 @@
         <li><a href="cool.HTML">Inicio</a></li>
         <li><a href="index.html">Productos</a></li>
         <li><a href="contacto.html">Contacto</a></li>
+         <li><a href="mill.html">Tablas</a></li>
       </ul>
     </nav>
   </header>
@@ -503,6 +504,7 @@
 
     </body>
 </table>
+
 
 
 
