--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="milo.css">
 </head>
 <body>
-  <header>
+   <header>
     <div class="contenedor-img">
       <img src="alin.png" alt="Logo de Rosas Eternas">
     </div>
@@ -19,6 +19,7 @@
         <li><a href="cool.HTML">Inicio</a></li>
         <li><a href="index.html">Productos</a></li>
         <li><a href="contacto.html">Contacto</a></li>
+         <li><a href="mill.html">Tablas</a></li>
       </ul>
     </nav>
   </header>
@@ -64,5 +65,6 @@
   </footer>
 </body>
 </html>
+
 
 
