--- a/index.html
+++ b/index.html
@@ -29,25 +29,22 @@
 <body>
    <center><h1>CATALOGO</h1></center> 
 
-   
-	 <header>
-        <div class="contenedor-img">
-        <img src= alin.png>
-	</div>
-            <h1>Rosas Eternas</h1>
-            <p>La belleza que perdura</p>
-        
-        <nav>
-            <ul class="navbar">
+  <header>
+    <div class="contenedor-img">
+      <img src="alin.png" alt="Logo de Rosas Eternas">
+    </div>
+    <h1>Rosas Eternas</h1>
+    <p>La belleza que perdura</p>
+    <nav>
+      <ul class="navbar">
 
-                <li><a href="cool.HTML">Inicio</a></li>
-                <li><a href="index.html">Productos</a></li>
-		                    
-
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+        <li><a href="cool.HTML">Inicio</a></li>
+        <li><a href="index.html">Productos</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+         <li><a href="mill.html">Tablas</a></li>
+      </ul>
+    </nav>
+  </header>
 
     <section id="Lista">
           <div class="categorias-lista">
@@ -428,4 +425,5 @@
   <footer id="contacto">
  <center> <p>&copy; 2025 Rosas Eternas MS. Todos los derechos reservados.</p></center></body>
 </html>
+
 
