--- a/mu.html
+++ b/mu.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-	 <header>
+	   <header>
     <div class="contenedor-img">
       <img src="alin.png" alt="Logo de Rosas Eternas">
     </div>
@@ -16,11 +16,11 @@
     <p>La belleza que perdura</p>
     <nav>
       <ul class="navbar">
-	              <li><a href="mu.html">carrito</a></li>
 
         <li><a href="cool.HTML">Inicio</a></li>
         <li><a href="index.html">Productos</a></li>
         <li><a href="contacto.html">Contacto</a></li>
+         <li><a href="mill.html">Tablas</a></li>
       </ul>
     </nav>
   </header>
@@ -101,4 +101,5 @@
   </footer>
 </body>
 </html>
+
 
